--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -1,6 +1,6 @@
 apply from: 'config.gradle'
 buildscript {
-    ext.kotlin_version = "1.6.0"
+    ext.kotlin_version = "1.9.23"
     repositories {
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://www.jitpack.io' }
@@ -11,13 +11,18 @@ buildscript {
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         maven { url 'https://developer.huawei.com/repo/' }
 
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+
         mavenCentral()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath 'com.android.tools.build:gradle:8.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.19"
+        classpath "de.undercouch:gradle-download-task:5.6.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
