--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -4,6 +4,7 @@ android.injected.testOnly=false
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+android.buildfeatures.buildconfig=true
 # application build version code
 APP_VERSION_CODE=5
 # application version name
@@ -16,6 +17,8 @@ SERVER_HOST=https://gateway-fulldemo.apprtc.cn/
 TOOLBOX_SERVER_HOST=https://service.apprtc.cn/toolbox
 TOOLBOX_SERVER_HOST_DEV=https://service-staging.agora.io/toolbox
 ROOM_MANAGER_SERVER_HOST=https://service.apprtc.cn/room-manager
+AI_CHAT_SERVER_HOST_DEV=https://ai-chat-service-staging.sh3t.agoralab.co
+AI_CHAT_SERVER_HOST=https://ai-chat-service.apprtc.cn
 
 #----------- Resource --------------
 BEAUTY_RESOURCE=
