--- a/Android/scenes/ktv_singbattle/build.gradle
+++ b/Android/scenes/ktv_singbattle/build.gradle
@@ -3,6 +3,7 @@ apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 
 final def VERSION_SCENE_KTV = "4.3.0"
 android {
+    namespace 'io.agora.scene.ktv.singbattle'
     defaultConfig {
         if(isModular()){
             applicationId "io.agora.scenes.ktv.singbattle"
