--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -46,22 +46,22 @@ include ':RTMSyncManager'
 ///*
 // * 在线K歌房
 // */
-//include ':scenes:ktv'
+include ':scenes:ktv'
 //
 ///*
 // * 嗨歌抢唱
 // */
-//include ':scenes:ktv_singbattle'
+include ':scenes:ktv_singbattle'
 //
 ///*
 // * 抢麦接唱
 // */
-//include ':scenes:ktv_relay'
+include ':scenes:ktv_relay'
 //
 ///**
 // * 大合唱
 // */
-//include ':scenes:cantata'
+include ':scenes:cantata'
 
 /*
  * 语聊房
