--- a/Android/common/scenario-api/lib_beautyapi/vendors.gradle
+++ b/Android/common/scenario-api/lib_beautyapi/vendors.gradle
@@ -1,53 +1,57 @@
 apply plugin: 'de.undercouch.download'
 
 task downloadVendorLibs {
-    // 商汤美颜库
-    def destFile = new File(buildDir, 'vendor_sensetime_9.3.1.zip')
-    download {
-        src 'https://download.agora.io/demo/release/vendor_sensetime_9.3.1.zip'
-        dest destFile
-        overwrite false
-    }
-    def fileTree = zipTree(destFile)
-    def HardwareBuffer = fileTree.getFiles().find {
-        it.name.contains("HardwareBuffer")
-    }
-    def SenseArSourceManager = fileTree.getFiles().find {
-        it.name.contains("SenseArSourceManager")
-    }
-    def STMobileJNI = fileTree.getFiles().find {
-        it.name.contains("STMobileJNI")
-    }
-    println "HardwareBuffer path= $HardwareBuffer.absolutePath"
-    println "SenseArSourceManager path= $SenseArSourceManager.absolutePath"
-    println "STMobileJNI path= $STMobileJNI.parentFile.absolutePath"
-    copy {
-        from HardwareBuffer
-        into 'aars/beauty_sensetime/HardwareBuffer'
-    }
-    copy {
-        from SenseArSourceManager
-        into 'aars/beauty_sensetime/SenseArSourceManager'
-    }
-    copy {
-        from STMobileJNI
-        into 'aars/beauty_sensetime/STMobileJNI'
+    doLast {
+        // 商汤美颜库
+        def destFile = new File(buildDir, 'vendor_sensetime_9.3.1.zip')
+
+        download.run {
+            src 'https://download.agora.io/demo/release/vendor_sensetime_9.3.1.zip'
+            dest destFile
+            overwrite false
+        }
+        def fileTree = zipTree(destFile)
+        def HardwareBuffer = fileTree.getFiles().find {
+            it.name.contains("HardwareBuffer")
+        }
+        def SenseArSourceManager = fileTree.getFiles().find {
+            it.name.contains("SenseArSourceManager")
+        }
+        def STMobileJNI = fileTree.getFiles().find {
+            it.name.contains("STMobileJNI")
+        }
+        println "HardwareBuffer path= $HardwareBuffer.absolutePath"
+        println "SenseArSourceManager path= $SenseArSourceManager.absolutePath"
+        println "STMobileJNI path= $STMobileJNI.parentFile.absolutePath"
+        copy {
+            from HardwareBuffer
+            into 'aars/beauty_sensetime/HardwareBuffer'
+        }
+        copy {
+            from SenseArSourceManager
+            into 'aars/beauty_sensetime/SenseArSourceManager'
+        }
+        copy {
+            from STMobileJNI
+            into 'aars/beauty_sensetime/STMobileJNI'
+        }
+
+        // 火山美颜库
+        destFile = new File(buildDir, 'vendor_bytedance_4.6.0.zip')
+        download.run {
+            src 'https://download.agora.io/demo/release/vendor_bytedance_4.6.0.zip'
+            dest destFile
+            overwrite false
+        }
+        fileTree = zipTree(destFile)
+        def EffectAAR = fileTree.getFiles().find {
+            it.name.contains("effectAAR")
+        }
+        println "EffectAAR path= $EffectAAR.absolutePath"
+        copy {
+            from EffectAAR
+            into 'aars/beauty_bytedance/EffectAAR'
+        }
     }
 
-    // 火山美颜库
-    destFile = new File(buildDir, 'vendor_bytedance_4.6.0.zip')
-    download {
-        src 'https://download.agora.io/demo/release/vendor_bytedance_4.6.0.zip'
-        dest destFile
-        overwrite false
-    }
-    fileTree = zipTree(destFile)
-    def EffectAAR = fileTree.getFiles().find {
-        it.name.contains("effectAAR")
-    }
-    println "EffectAAR path= $EffectAAR.absolutePath"
-    copy {
-        from EffectAAR
-        into 'aars/beauty_bytedance/EffectAAR'
-    }
 }
