--- a/Android/scenes/aichat/build.gradle
+++ b/Android/scenes/aichat/build.gradle
@@ -15,6 +15,7 @@ if (xf_appkey.isEmpty() || xf_appkey.contains("*********") || xf_appSecret.isEmp
 }
 
 android {
+    namespace 'io.agora.scene.aichat'
     defaultConfig {
         if (isModular()) {
             applicationId "io.agora.scene.aichat"
@@ -58,10 +59,4 @@ dependencies {
     implementation rootProject.ext.deps.apng
 
     implementation rootProject.ext.deps.agora_chat
-
-    // room
-    implementation "com.kunminx.arch:unpeek-livedata:7.8.0"
-    implementation "androidx.room:room-runtime:2.5.1"
-    kapt "androidx.room:room-compiler:2.5.1"
-    implementation "androidx.room:room-ktx:2.5.1"
 }
