--- a/Android/scenes/cantata/build.gradle
+++ b/Android/scenes/cantata/build.gradle
@@ -3,6 +3,7 @@ apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 
 final def VERSION_SCENE_GRAND_CHORUS = "4.3.0"
 android {
+    namespace 'io.agora.scene.cantata'
     defaultConfig {
         if (isModular()) {
             applicationId "io.agora.scenes.cantata"
