--- a/Android/scenes/play_zone/SudMGPWrapper/build.gradle
+++ b/Android/scenes/play_zone/SudMGPWrapper/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
 android {
+    namespace 'tech.sud.mgp.SudMGPWrapper'
+
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
     defaultConfig {
@@ -16,8 +18,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
