--- a/Android/scenes/pure1v1/build.gradle
+++ b/Android/scenes/pure1v1/build.gradle
@@ -2,10 +2,10 @@ ext {
     private1v1_is_modular = false
 }
 apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
-apply plugin: 'org.jetbrains.kotlin.android'
 
 final def VERSION_SCENE_PRIVATE1V1 = "4.2.1"
 android {
+    namespace 'io.agora.scene.pure1v1'
     defaultConfig {
         if(private1v1_is_modular){
             applicationId "io.agora.private1v1"
@@ -29,13 +29,6 @@ android {
     }
     buildFeatures {
         viewBinding true
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
     }
 }
 
