--- a/Android/scenes/show/build.gradle
+++ b/Android/scenes/show/build.gradle
@@ -4,6 +4,7 @@ apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 final def VERSION_SCENE_SHOW = "4.2.1"
 
 android {
+    namespace 'io.agora.scene.show'
     defaultConfig {
         if (isModular()) {
             applicationId "io.agora.scenes.show"
