--- a/Android/scenes/showTo1v1/build.gradle
+++ b/Android/scenes/showTo1v1/build.gradle
@@ -6,6 +6,7 @@ apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 final def VERSION_SCENE_SHOW_1V1 = "4.2.1"
 
 android {
+    namespace 'io.agora.scene.showTo1v1'
     defaultConfig {
         if(isModular()){
             applicationId "io.agora.scenes.showto1v1"
