--- a/Android/scenes/voice_spatial/build.gradle
+++ b/Android/scenes/voice_spatial/build.gradle
@@ -5,7 +5,7 @@ apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 
 final def VERSION_SCENE_SPATIAL_VOICE = "4.1.200"
 android {
-
+    namespace 'io.agora.scene.voice.spatial'
     defaultConfig {
         if(voice_is_modular){
             applicationId "io.agora.scenes.voice.spatial"
