[Feat] update gradle version 8.2, compileSdkVersion 34 (#1214)
* [Feat] update gradle version 8.2, compileSdkVersion 34

* [Feat] rtt resources

--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -4,6 +4,7 @@ android.injected.testOnly=false
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+android.buildfeatures.buildconfig=true
 # application build version code
 APP_VERSION_CODE=5
 # application version name
