--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -80,10 +80,11 @@ def all_pods
   pod 'KakaJSON'
   pod 'Agora_Chat_iOS', '1.0.8'
   pod 'SwiftyBeaver', '1.9.5'
-  pod 'Protobuf', '3.22.1'
+  pod 'Protobuf', '3.21.12'
   pod 'SwiftProtobuf'
 #  pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
 
+  pod 'AgoraTranscriptSubtitle', '0.0.3'
   #bugly
   pod 'Bugly','2.6.1'
   
