--- a/Android/scenes/ktv/build.gradle
+++ b/Android/scenes/ktv/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     implementation project(':common:scenario-api:lib_ktvapi')
     implementation project(':RTMSyncManager')
 
-    implementation rootProject.ext.deps.lyricsView
+    implementation rootProject.ext.deps.lyricsViewEx
     implementation rootProject.ext.deps.annotation
     implementation rootProject.ext.deps.material
     implementation rootProject.ext.deps.palette_ktx
@@ -34,6 +34,5 @@ dependencies {
     implementation rootProject.ext.deps.fragment_ktx
 
     implementation rootProject.ext.deps.rtm
-//    implementation rootProject.ext.deps.syncManager
     implementation rootProject.ext.deps.audiokit
 }
