--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
     <!-- android 13 细化权限   -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="remove"/>
+
     <!--适配Android R包可见性 开始-->
     <queries package="${applicationId}">
         <intent>
