[Feat][Android] Upgrade dependency library versions and remove unused libraries

--- a/Android/RTMSyncManager/build.gradle
+++ b/Android/RTMSyncManager/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation rootProject.ext.deps.okhttp
     implementation rootProject.ext.deps.okhttp_logger
     implementation rootProject.ext.deps.retrofit2
-    implementation rootProject.ext.deps.retrofit2_cov
+    implementation rootProject.ext.deps.retrofit2_gson
 
     implementation project(":common:base")
 }
