--- a/Android/config.gradle
+++ b/Android/config.gradle
@@ -7,11 +7,11 @@
 
 
 ext {
-    glide_version = '4.11.0'
-    retrofit2_version = '2.6.3'
+    glide_version = '4.16.0'
+    retrofit2_version = '2.11.0'
     deps = [
-            appcompat         : 'androidx.appcompat:appcompat:1.4.1',
-            annotation        : 'androidx.annotation:annotation:1.5.0',
+            appcompat         : 'androidx.appcompat:appcompat:1.6.1',
+            annotation        : 'androidx.annotation:annotation:1.6.0',
             arouter_kapt      : 'com.alibaba:arouter-compiler:1.5.2',
             arouter           : 'com.alibaba:arouter-api:1.5.2',
             coroutines_android: 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1',
@@ -20,43 +20,40 @@ ext {
             glide_compiler    : "com.github.bumptech.glide:compiler:$glide_version",
 
             multidex          : 'androidx.multidex:multidex:2.0.0',
-            constraintlayout  : 'androidx.constraintlayout:constraintlayout:2.1.3',
-            material          : 'com.google.android.material:material:1.5.0',
-            eventbus          : 'org.greenrobot:eventbus:3.1.1',
+            constraintlayout  : 'androidx.constraintlayout:constraintlayout:2.1.4',
+            material          : 'com.google.android.material:material:1.10.0',
 
             rxandroid2        : 'io.reactivex.rxjava2:rxandroid:2.1.1',
-            rxjava2           : 'io.reactivex.rxjava2:rxjava:2.2.16',
+            rxjava2           : 'io.reactivex.rxjava2:rxjava:2.2.21',
             retrofit2         : "com.squareup.retrofit2:retrofit:$retrofit2_version",
             retrofit2_adapter : "com.squareup.retrofit2:adapter-rxjava2:$retrofit2_version",
-            retrofit2_cov     : "com.squareup.retrofit2:converter-gson:$retrofit2_version",
             retrofit2_gson    : "com.squareup.retrofit2:converter-gson:$retrofit2_version",
-            okhttp            : 'com.squareup.okhttp3:okhttp:3.12.0',
-            okhttp_logger     : 'com.squareup.okhttp3:logging-interceptor:4.10.0',
+            okhttp            : 'com.squareup.okhttp3:okhttp:5.0.0-alpha.14',
+            okhttp_logger     : 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.14',
 
-            lifecycle         : 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1',
-            lifecycle_runtime : 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1',
-            fragment_ktx      : 'androidx.navigation:navigation-fragment-ktx:2.4.1',
-            ui_ktx            : 'androidx.navigation:navigation-ui-ktx:2.4.1',
+            lifecycle         : 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1',
+            lifecycle_runtime : 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1',
+            fragment_ktx      : 'androidx.navigation:navigation-fragment-ktx:2.6.0',
+            ui_ktx            : 'androidx.navigation:navigation-ui-ktx:2.6.0',
             palette_ktx       : 'androidx.palette:palette-ktx:1.0.0',
             layout_kernel     : 'com.scwang.smart:refresh-layout-kernel:2.0.3',
             header_classics   : 'com.scwang.smart:refresh-header-classics:2.0.3',
 
             apng              : 'com.github.penfeizhou.android.animation:apng:2.7.0',
-            xlog              : 'com.elvishew:xlog:1.6.1',
+            xlog              : 'com.elvishew:xlog:1.11.1',
             logger            : 'com.orhanobut:logger:2.2.0',
             gson              : 'com.google.code.gson:gson:2.9.0',
             autosize          : 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1',
 
             rtc               : 'io.agora.rtc:full-sdk:4.5.0',
             rtm               : 'io.agora:agora-rtm:2.2.2',
-            syncManager       : 'com.github.AgoraIO-Community:SyncManager-Android:2.2.12',
-//            lyricsView        : 'com.github.AgoraIO-Community:LyricsView:1.1.4',
+            syncManager       : 'com.github.AgoraIO-Community:SyncManager-Android:3.0.1',
             lyricsViewEx      : 'io.github.winskyan:Agora-LyricsViewEx:2.1.0-alpha.1',
+            transcriptionWidget      : 'io.github.winskyan:Agora-TranscriptionWidget:0.0.1-alpha.3',
 
             // android native libraries
-            core_ktx           : "androidx.core:core-ktx:1.7.0",
-            recyclerview       : "androidx.recyclerview:recyclerview:1.2.1",
-            databinding_runtime: "androidx.databinding:databinding-runtime:4.2.2",
+            core_ktx           : "androidx.core:core-ktx:1.10.1",
+            recyclerview       : "androidx.recyclerview:recyclerview:1.3.0",
 
             // im
             bugly              : 'com.tencent.bugly:crashreport:4.0.4',
