--- a/Android/scenes/joy/build.gradle
+++ b/Android/scenes/joy/build.gradle
@@ -15,7 +15,6 @@ android {
 dependencies {
     implementation project(":common:base")
     implementation project(':common:ui-widget')
-    implementation project(':RTMSyncManager')
 
     implementation rootProject.ext.deps.annotation
     implementation rootProject.ext.deps.material
@@ -30,4 +29,5 @@ dependencies {
     implementation rootProject.ext.deps.fragment_ktx
 
     implementation rootProject.ext.deps.rtm
+    implementation rootProject.ext.deps.syncManager
 }
