--- a/Android/scenes/pure1v1/build.gradle
+++ b/Android/scenes/pure1v1/build.gradle
@@ -38,7 +38,6 @@ dependencies {
     implementation project(':common:ui-widget')
     implementation project(':common:scenario-api:lib_callapi')
     implementation project(':common:scenario-api:lib_audioscenarioapi')
-    implementation project(':RTMSyncManager')
 
     kapt rootProject.ext.deps.arouter_kapt
     implementation rootProject.ext.deps.arouter
@@ -58,8 +57,11 @@ dependencies {
     implementation rootProject.ext.deps.rtm
 
     implementation rootProject.ext.deps.gson
+    implementation rootProject.ext.deps.syncManager
 
-    implementation('io.github.winskyan:Agora-TranscriptionWidget:0.0.1-alpha.3') {
-        exclude group: "androidx.recyclerview", module: "recyclerview"
-    }
+//    implementation(rootProject.ext.deps.transcriptionWidget) {
+//        exclude group: "androidx.recyclerview", module: "recyclerview"
+//    }
+
+    implementation rootProject.ext.deps.transcriptionWidget
 }
