--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -11,6 +11,8 @@ APP_VERSION_CODE=5
 APP_VERSION_NAME=6.0.0
 # use local sdk
 USE_LOCAL_SDK=false
+# use local syncManager
+USE_LOCAL_SYNC_MANAGER=false
 
 #----------- Resource --------------
 BEAUTY_RESOURCE=
