--- a/Android/config.gradle
+++ b/Android/config.gradle
@@ -45,6 +45,7 @@ ext {
             gson              : 'com.google.code.gson:gson:2.9.0',
             autosize          : 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1',
 
+            agora_authentication: 'io.agora:authentication:2.0.0',
             rtc               : 'io.agora.rtc:full-sdk:4.5.0',
             rtm               : 'io.agora:agora-rtm:2.2.2',
             syncManager       : 'com.github.AgoraIO-Community:SyncManager-Android:3.0.1',
