--- a/Android/scenes/cantata/build.gradle
+++ b/Android/scenes/cantata/build.gradle
@@ -30,10 +30,8 @@ dependencies {
     implementation rootProject.ext.deps.lifecycle
     implementation rootProject.ext.deps.fragment_ktx
 
-    implementation rootProject.ext.deps.syncManager
-
     // agora
-    implementation 'io.agora:authentication:1.6.1'
+    implementation rootProject.ext.deps.agora_authentication
     // huawei
     implementation rootProject.ext.deps.audiokit
 }
