--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -62,9 +62,9 @@ include ':common:scenario-api:lib_beautyapi:aars:beauty_bytedance:EffectAAR'
 
 //include ':RTMSyncManager'
 
-///*
-// * 在线K歌房
-// */
+/*
+ * 在线K歌房
+ */
 include ':scenes:ktv'
 
 /*
