[Feat][Android] update play zone

--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -21,10 +21,15 @@ BEAUTY_RESOURCE=
 AGORA_APP_ID=
 AGORA_APP_CERTIFICATE=
 
-# IM Key Config (only necessary in scene 'voice chat room')
+# IM Key Config (only necessary in scene 'voice chat room' & 'play_zone')
 IM_APP_KEY=
 IM_APP_CLIENT_ID=
 IM_APP_CLIENT_SECRET=
+
+# Sud Key Config (only necessary in scene play_zone') -----------
+SUB_APP_ID=
+SUB_APP_KEY=
+SUB_APP_SECRET=
 
 # Restful API Config
 RESTFUL_API_KEY=
