--- a/Android/scenes/play_zone/build.gradle
+++ b/Android/scenes/play_zone/build.gradle
@@ -3,14 +3,6 @@ apply from: "${rootProject.getRootDir().absolutePath}/modular.gradle"
 
 final def VERSION_SCENE_CODE = "4.10.2"
 
-final def sub_appid = "1802594543385935873"
-final def sub_appkey = "*****************************"
-final def sub_appSecret = "*****************************"
-
-if (sub_appid.isEmpty() || sub_appkey.isEmpty() || sub_appkey.contains("********")) {
-    throw new GradleException("请在 play_zone:build.gradle 中配置完整的 sub_appid，sub_appkey")
-}
-
 android {
     namespace 'io.agora.scene.playzone'
     defaultConfig {
@@ -18,9 +10,9 @@ android {
             applicationId "io.agora.scenes.playzone"
         }
         buildConfigField "String", "VERSION", "\"${VERSION_SCENE_CODE}\""
-        buildConfigField "String", "sub_appid", "\"${sub_appid}\""
-        buildConfigField "String", "sub_appkey", "\"${sub_appkey}\""
-        buildConfigField "String", "sub_appSecret", "\"${sub_appSecret}\""
+        buildConfigField "String", "SUB_APP_ID", "\"${SUB_APP_ID}\""
+        buildConfigField "String", "SUB_APP_KEY", "\"${SUB_APP_KEY}\""
+        buildConfigField "String", "SUB_APP_SECRET", "\"${SUB_APP_SECRET}\""
 
         buildConfigField "String", "IM_APP_KEY", "\"${IM_APP_KEY}\""
         buildConfigField "String", "IM_APP_CLIENT_ID", "\"${IM_APP_CLIENT_ID}\""
@@ -32,7 +24,6 @@ dependencies {
     implementation project(":common:base")
     implementation project(':common:ui-widget')
     implementation project(':IMKitManager')
-    implementation project(':scenes:play_zone:SudMGPWrapper')
 
     implementation rootProject.ext.deps.annotation
     implementation rootProject.ext.deps.material
@@ -48,4 +39,7 @@ dependencies {
     implementation rootProject.ext.deps.fragment_ktx
 
     implementation rootProject.ext.deps.agora_chat
+
+    // 引入 SudMGPSDK
+    api 'tech.sud.mgp:SudMGP:1.4.0.1191'
 }
