--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -38,7 +38,8 @@ def all_pods
 
   pod 'AgoraSyncManager', '~> 2.1.7'
 #  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
-  pod 'AgoraRtcEngine_Special_iOS', '4.3.2.4'
+#  pod 'AgoraRtcEngine_Special_iOS', '4.3.2.4'
+  pod 'AgoraRtcEngine_iOS', '4.5.0'
   pod 'AgoraHy', :path => 'AgoraHy.podspec'
 #  pod 'AgoraRtm', '2.2.1'
   pod 'AgoraRtm', :path => 'AgoraRtm.podspec'
