--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -37,8 +37,7 @@ def all_pods
   #pod 'FURenderKit', :path => 'FURenderKit.podspec'
 
   pod 'AgoraSyncManager', '~> 2.1.7'
-#  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
-  pod 'AgoraRtcEngine_Special_iOS', '4.3.2.4'
+  pod 'AgoraRtcEngine_iOS', '4.5.0'
   pod 'AgoraHy', :path => 'AgoraHy.podspec'
 #  pod 'AgoraRtm', '2.2.1'
   pod 'AgoraRtm', :path => 'AgoraRtm.podspec'
@@ -85,7 +84,7 @@ def all_pods
   pod 'Protobuf', '3.21.12'
   pod 'SwiftProtobuf'
 
-#  pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
+  pod 'LookinServer', :subspecs => ['Swift'], :configurations => ['Debug']
 
   pod 'AgoraTranscriptSubtitle', '0.0.3'
   #bugly
