[Android] fix protobuf version

--- a/Android/scenes/pure1v1/build.gradle
+++ b/Android/scenes/pure1v1/build.gradle
@@ -59,5 +59,8 @@ dependencies {
 //        exclude group: "androidx.recyclerview", module: "recyclerview"
 //    }
 
-    implementation rootProject.ext.deps.transcriptionWidget
+    implementation (rootProject.ext.deps.transcriptionWidget){
+        exclude group: "com.google.protobuf", module: "protobuf-java"
+        exclude group: "com.google.protobuf", module: "protobuf-java-util"
+    }
 }
