--- a/iOS/AgoraEntScenarios/Info.plist
+++ b/iOS/AgoraEntScenarios/Info.plist
@@ -17,6 +17,8 @@
 	<array>
 		<string>audio</string>
 	</array>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
 </dict>
