--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -65,22 +65,22 @@ include ':common:scenario-api:lib_beautyapi:aars:beauty_bytedance:EffectAAR'
 /*
  * 在线K歌房
  */
-include ':scenes:ktv'
+//include ':scenes:ktv'
 
 /**
  * 大合唱
  */
-include ':scenes:cantata'
+//include ':scenes:cantata'
 
 /*
  * 语聊房
  */
-include ':scenes:voice'
+//include ':scenes:voice'
 
 /*
  * 空间音频语聊房
  */
-include ':scenes:voice_spatial'
+//include ':scenes:voice_spatial'
 
 /*
  * 秀场直播
@@ -105,8 +105,8 @@ include ':scenes:showTo1v1'
 /**
  * 休闲游戏
  */
-include ':scenes:play_zone'
-include ':IMKitManager'
+//include ':scenes:play_zone'
+//include ':IMKitManager'
 
 /**
  * AI 社交陪聊
